# cli

./: .gitignore  Cargo.toml  Cross.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml
crates/dkp-cli/: CHANGELOG.md  Cargo.toml  build.rs
crates/dkp-cli/src/: cli.rs  lib.rs  main.rs  output.rs
crates/dkp-cli/src/cmd/: build.rs  chunk.rs  cross_refs.rs  diff.rs  eval.rs  export.rs  fix.rs  generate.rs  get.rs  graph.rs  info.rs  init.rs  inject.rs  keygen.rs  l10n.rs  list.rs  mcp_manifest.rs  mod.rs  new.rs  okf.rs  prompt.rs  release_check.rs  review.rs  rights.rs  run.rs  search.rs  serve.rs  sign.rs  skills.rs  validate.rs
crates/dkp-cli/src/cmd/procedures/: list.rs  mod.rs  new.rs  validate.rs
crates/dkp-cli/src/cmd/registry/: account.rs  install.rs  mod.rs  publish.rs  uninstall.rs  update.rs  yank.rs
crates/dkp-cli/src/cmd/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/dkp-cli/src/cmd/tui/panels/: assets.rs  chunks.rs  detail.rs  eval.rs  mcp.rs  mod.rs  search.rs
crates/dkp-cli/src/cmd/webui/: embed.rs  mod.rs  server.rs
crates/dkp-cli/src/cmd/webui/routes/: assets.rs  graph.rs  mod.rs  pack.rs  search.rs
crates/dkp-cli/src/cmd/webui/web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
crates/dkp-cli/src/cmd/webui/web/src/: App.svelte  app.css
crates/dkp-cli/src/cmd/webui/web/src/lib/: api.ts
crates/dkp-cli/src/cmd/webui/web/src/lib/components/: SearchBar.svelte  Sidebar.svelte
crates/dkp-cli/src/cmd/webui/web/src/lib/components/panels/: AssetsPanel.svelte  ChunksPanel.svelte  EvalPanel.svelte  GlossaryPanel.svelte  GraphPanel.svelte  McpPanel.svelte  RulesPanel.svelte
crates/dkp-core/: CHANGELOG.md  Cargo.toml
crates/dkp-core/src/: config.rs  error.rs  lib.rs
crates/dkp-core/src/okf/: exporter.rs  mod.rs  parser.rs
crates/dkp-core/src/pack/: loader.rs  mod.rs
crates/dkp-core/src/procedures/: executor.rs  mod.rs  scaffold.rs  schema.rs
crates/dkp-core/src/registry/: client.rs  mod.rs  types.rs
crates/dkp-core/src/search/: index.rs  mod.rs
crates/dkp-core/src/types/: assets.rs  chunks.rs  constraints.rs  cross_refs.rs  decision_trees.rs  eval.rs  evidence.rs  glossary.rs  graph.rs  manifest.rs  mcp_manifest.rs  mod.rs  ontology.rs  rules.rs
crates/dkp-core/src/validate/: gate4.rs  gate7.rs  gate8.rs  gates.rs  mod.rs
crates/dkp-gen-core/: CHANGELOG.md  Cargo.toml
crates/dkp-gen-core/src/: config.rs  error.rs  lib.rs
crates/dkp-gen-core/src/chunk/: mod.rs  splitter.rs
crates/dkp-gen-core/src/eval/: mod.rs
crates/dkp-gen-core/src/fix/: mod.rs
crates/dkp-gen-core/src/llm/: client.rs  mock.rs  mod.rs  openai.rs
crates/dkp-gen-core/src/pipeline/: context.rs  human.rs  machine.rs  manifest.rs  mod.rs
crates/dkp-gen-core/src/prompt/: mod.rs  parse.rs  templates.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
dist-templates/: dkp-installer.ps1  dkp-installer.sh
docs/: book.toml
docs/completions/: _dkp  _dkp.ps1  dkp.bash  dkp.fish
docs/man/: dkp-build.1  dkp-chunk.1  dkp-cross-refs-list.1  dkp-cross-refs-validate.1  dkp-cross-refs.1  dkp-diff.1  dkp-eval.1  dkp-export.1  dkp-fix.1  dkp-generate.1  dkp-get.1  dkp-graph-list.1  dkp-graph-stats.1  dkp-graph-validate.1  dkp-graph.1  dkp-info.1  dkp-init.1  dkp-inject.1  dkp-install.1  dkp-keygen.1  dkp-l10n-export.1  dkp-l10n-list.1  dkp-l10n-validate.1  dkp-l10n.1  dkp-list.1  dkp-mcp-manifest.1  dkp-new.1  dkp-okf-browse.1  dkp-okf-export.1  dkp-okf-links.1  dkp-okf-stats.1  dkp-okf-validate.1  dkp-okf.1  dkp-procedures-list.1  dkp-procedures-new.1  dkp-procedures-validate.1  dkp-procedures.1  dkp-prompt.1  dkp-publish.1  dkp-registry-keys-add.1  (+35 more)
docs/src/: SUMMARY.md  faq.md  intro.md  quickstart.md
docs/src/reference/: man-pages.md  shell-completions.md
