[workspace]
resolver = "2"
members = [
    "crates/dkp-core",
    "crates/dkp-cli",
    "crates/dkp-gen-core",
    "crates/xtask",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["DKP Authors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Documentation generation
clap_mangen = "0.3.0"
clap_complete = "4.6.5"
clap-markdown = "0.1.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Full-text search
tantivy = "0.26.1"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Output formatting
comfy-table = "7"
owo-colors = "4"
indicatif = "0.17"

# Archive formats
zip = "2"
tar = "0.4"
flate2 = "1"
xz2 = { version = "0.1.7", features = ["static"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"

# JSON Schema validation
jsonschema = { version = "0.26", default-features = false }

# CSV
csv = "1"

# Platform paths
dirs = "5"

# Password prompting (hidden input)
rpassword = "7"

# TUI (declared in consuming crates as optional)
ratatui = "0.28"
crossterm = "0.28"

# MCP server (declared in consuming crates as optional)
rmcp = { version = "0.1", features = ["server", "transport-sse-server", "tower"] }

# Web UI (declared in consuming crates as optional)
axum = { version = "0.8", features = ["macros"] }
rust-embed = { version = "8", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
open = "5"

# WASM/WASI procedure execution (declared in consuming crates as optional)
wasmtime = { version = "46", features = ["component-model"] }
wasmtime-wasi = { version = "46" }

# Async traits
async-trait = "0.1"
futures = "0.3"

# URL percent-encoding
urlencoding = "2"

# Encoding utilities
base64 = "0.22"
hex = "0.4"
tempfile = "3"

# Internal crates
dkp-core = { path = "crates/dkp-core", version = "0.3.0" }
dkp-gen-core = { path = "crates/dkp-gen-core", version = "0.3.0" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
targets = [
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "aarch64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
macos-universal = true
installers = ["shell", "powershell", "homebrew"]
tap = "dkp-standard/homebrew-dkp"
out-dir = "dist"
cargo-auditable = true
