[package]
name = "dkp-core"
description = "Core DKP bundle parsing, types, validation, and search library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/dkp-standard/cli"
homepage = "https://dkp-standard.com"
documentation = "https://docs.rs/dkp-core"
readme = "README.md"

[features]
default = []
procedures = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tantivy = { workspace = true }
jsonschema = { workspace = true }
figment = { workspace = true }
csv = { workspace = true }
zip = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }

wasmtime = { workspace = true, optional = true }
wasmtime-wasi = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
